# islab_ws

./: .gitignore
src/follow_me_cpp/: CMakeLists.txt  package.xml
src/follow_me_py/: package.xml  setup.cfg  setup.py
src/follow_me_py/config/: follow_me.xml  nav2_params.yaml
src/follow_me_py/follow_me_py/: kalman_filter.py  tracker.py
src/follow_me_py/launch/: nav.launch.py  robot.launch.py  sensor.launch.py  slam.launch.py
src/follow_me_py/models/: tracer_mini.sdf
src/follow_me_py/urdf/: diff_drive_controller.yaml  tracer_mini.back.urdf  tracer_mini.urdf
